compiler/tests/should-pass/code-generation/commitment/Array.via
host alice
host bob
host chuck
assume alice trusts bob
assume bob trusts chuck
assume chuck trusts alice

fun main() {
    val x = Array[int]@Commitment(receivers = {bob, chuck}, sender = alice)(10);
    x[0] = input int from alice;
    x[1] = 1;
}

