compiler/tests/should-fail/TooManyArguments.via
/* IncorrectNumberOfArgumentsError */

fun main() {
    val x: int = 5;
    assert x[1] == 5;
}
